# DOVESEI

./: .gitignore  .gitmodules  LICENSE  README.md  WIP_README.md  build_user_image.sh  launch_x11_remote.sh
examples/: example_client.py  image_publisher.py
src/ros2_open_voc_landing_heatmap/: package.xml  setup.cfg  setup.py
src/ros2_open_voc_landing_heatmap/cfg/: semantic_segmentation_added.json
src/ros2_open_voc_landing_heatmap/examples/: example_client.py  image_publisher.py
src/ros2_open_voc_landing_heatmap/launch/: start.launch.py  start_aerialview.launch.py
src/ros2_open_voc_landing_heatmap/ros2_open_voc_landing_heatmap/: Dockerfile.localuser  generate_landing_heatmap.py  generate_landing_heatmap_groundtruth.py  lander_publisher.py  launch_x11_remote.sh
src/ros2_open_voc_landing_heatmap/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/ros2_open_voc_landing_heatmap_srv/: CMakeLists.txt  package.xml
src/ros2_open_voc_landing_heatmap_srv/srv/: GetLandingHeatmap.srv
src/ros2_satellite_aerial_view_simulator/: package.xml  setup.cfg  setup.py
src/ros2_satellite_aerial_view_simulator/launch/: aerialview.launch.py
src/ros2_satellite_aerial_view_simulator/ros2_satellite_aerial_view_simulator/: aerialimages.py
utils/: experiments.bash  generate_video.bash  save_messages.py
